# main.go
@@ -7,6 +7,8 @@ import (
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 
 	_ "github.com/pashukhin/indriver-test-task/docs" // docs is generated by Swag CLI, you have to import it.
+
+	"github.com/pashukhin/indriver-test-task/controller"
 )
 
 // @title inDriver test task
@@ -21,8 +23,18 @@ import (
 func main() {
 	r := gin.Default()
 
-	swaggerUrl := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, swaggerUrl))
+	swaggerURL := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, swaggerURL))
+
+	carModelController := &controller.CarModel{}
+	carModelGroup := r.Group("/car_model")
+	{
+		carModelGroup.GET("/", carModelController.List)
+		carModelGroup.GET("/:id", carModelController.Get)
+		carModelGroup.POST("/", carModelController.Create)
+		carModelGroup.PUT("/:id", carModelController.Update)
+		carModelGroup.DELETE("/:id", carModelController.Delete)
+	}
 
 	r.GET("/ping", func(c *gin.Context) {
 		c.JSON(200, gin.H{
